Fix images' layout shift

--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,6 @@ body {
 
 .content__image,
 .card__image {
-  width: 100%;
   height: auto;
   max-width: 500px;
   display: block;
